namespace TicTacToe.Models.Types;

public enum ErrorType
{
    NOT_EMPTY,
    NOT_OWNER,
    SAME_COORDINATES,
    WRONG_COORDINATES,
    NULL,
}
